--- a/app/src/pages/login/login.html
+++ b/app/src/pages/login/login.html
@@ -4,15 +4,15 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+<ion-content>
+  <div class="login--container">
+    <div class="logo">
+      Todos<span>.</span>
+    </div>
+    <div class="sub-title">
+      Create a Todos account and add your team members
+    </div>
+    <button><div class="button--container"><ion-icon name="keypad"></ion-icon><div>Continue with the phone number</div></div></button>
+  </div>
 </ion-content>
