list all and pending tasks

--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -7,11 +7,16 @@
 <ion-content padding>
   <h2 (click)="addNewTask()">New Task</h2>
   <ion-list>
-    <ion-item *ngFor="let task of upcommingTasks">
-      <h3>{{task.title}}</h3>
-      <p>{{task.description}}</p>
-      <p>{{task.project}}</p>
-      <p>{{task.due_date}}</p>
-    </ion-item>
+    <ion-item-sliding *ngFor="let task of upcommingTasks; let idx = index">
+      <ion-item>
+        <h3>{{task.title}}</h3>
+        <p>{{task.description}}</p>
+        <p>{{task.project}}</p>
+        <p>{{task.due_date}}</p>
+      </ion-item>
+      <ion-item-options side="right">
+        <button ion-button (click)="changeStatus(idx,task)">Completed</button>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
