--- a/app/src/pages/addTasks/addTask.html
+++ b/app/src/pages/addTasks/addTask.html
@@ -43,7 +43,7 @@
 
     <ion-item>
       <ion-label>Date</ion-label>
-      <ion-datetime displayFormat="MM/DD/YYYY" class="form-control" formControlName="date"></ion-datetime>
+      <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date"></ion-datetime>
     </ion-item>
     <button ion-button full (click)="addNewTask()">Full Button</button>
   </form>
