--- a/app/src/pages/login/login.html
+++ b/app/src/pages/login/login.html
@@ -31,7 +31,7 @@
           </ion-item>
           <ion-item class="countryCode--item">
               <ion-label floating>Country</ion-label>
-              <ion-select formControlName="country" interface='popover'>
+              <ion-select formControlName="country_code" interface='popover'>
                 <ion-option *ngFor="let country of countries" [value]="country.callingCode[0]" [selected]="country.name.common==='Sri Lanka'">{{ country.name.common }}</ion-option>
               </ion-select>
             </ion-item>
