--- a/app/src/pages/verify/verify.html
+++ b/app/src/pages/verify/verify.html
@@ -4,15 +4,25 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>verify</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
-<ion-content padding>
-
+<ion-content>
+  <div class="login--container">
+    <div class="logo">Todos<span>.</span></div>
+      <div class="sub-title">
+        {{subTitle}}
+      </div>
+      <ion-item>
+        <ion-label stacked color="apptxt">Verification code</ion-label>
+        <ion-input type="text" [(ngModel)]="user.token" color="apptxt"></ion-input>
+      </ion-item>
+      <button class="login--button" (click)="verify()">Sign up</button>
+  </div>
 </ion-content>
