fixed login issues

--- a/app/src/pages/login/login.html
+++ b/app/src/pages/login/login.html
@@ -23,11 +23,11 @@
         <form [formGroup]="loginForm">
           <ion-item>
             <ion-label stacked color="apptxt">First Name</ion-label>
-            <ion-input type="text" formControlName="first_name" color="apptxt"></ion-input>
+            <ion-input type="text" formControlName="firstname" color="apptxt"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label stacked color="apptxt">Last Name</ion-label>
-            <ion-input type="text" formControlName="last_name"  color="apptxt"></ion-input>
+            <ion-input type="text" formControlName="lastname"  color="apptxt"></ion-input>
           </ion-item>
           <ion-item class="countryCode--item">
               <ion-label floating>Country</ion-label>
