--- a/app/src/pages/tabs/tabs.html
+++ b/app/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Task" tabIcon="information-circle"></ion-tab>
+<ion-tabs tabsLayout="title-hide" tabs-only color="appbg">
+  <ion-tab [root]="tab1Root" tabTitle="Upcoming" tabIcon="notifications"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="All tasks" tabIcon="archive"></ion-tab>
 </ion-tabs>
