--- a/app/src/pages/tasks/userTasks.html
+++ b/app/src/pages/tasks/userTasks.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color="appbg">
+    <ion-title>All tasks</ion-title>
   </ion-navbar>
 </ion-header>
 
