--- a/app/src/pages/addTasks/addTask.html
+++ b/app/src/pages/addTasks/addTask.html
@@ -3,9 +3,9 @@
     <ion-title>Home</ion-title>
     <ion-buttons left>
       <button ion-button icon-only (click)="viewCtrl.dismiss()">
-          <ion-icon name="arrow-back"></ion-icon>
+        <ion-icon name="arrow-back"></ion-icon>
       </button>
-  </ion-buttons>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
@@ -13,24 +13,30 @@
   <form novalidate [formGroup]="myform">
 
     <ion-item>
-        <label>Title</label>
-        <input type="text" class="form-control" formControlName="title">
-      </ion-item>
+      <label>Title</label>
+      <input type="text" class="form-control" formControlName="title">
+    </ion-item>
 
-      <ion-item>
-        <label>Description</label>
-        <input type="text" class="form-control" formControlName="description">
-      </ion-item>
+    <ion-item>
+      <label>Description</label>
+      <input type="text" class="form-control" formControlName="description">
+    </ion-item>
 
-      <ion-item>
+    <ion-item>
       <label>Project</label>
       <input type="text" class="form-control" formControlName="project">
     </ion-item>
 
     <ion-item>
-      <label>Assigned To</label>
-      <input type="text" class="form-control" formControlName="assigned_to">
-    </ion-item>
+        <label>Assigned To</label>
+        <input type="text" list="list" name="list" class="form-control" formControlName="assigned_to">
+        <datalist id="list">
+          <option value="new">new</option>
+          <option value="new">new</option>
+          <option value="new">new</option>
+          <option value="new">new</option>
+        </datalist>
+      </ion-item>
 
     <ion-item>
       <label>Status</label>
@@ -45,6 +51,7 @@
       <ion-label>Date</ion-label>
       <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date"></ion-datetime>
     </ion-item>
+
     <button ion-button full (click)="addNewTask()">Full Button</button>
   </form>
 </ion-content>
