--- a/app/src/pages/addTasks/addTask.html
+++ b/app/src/pages/addTasks/addTask.html
@@ -55,12 +55,14 @@
           <ion-option *ngFor="let stat of status" [value]="stat">{{stat}}</ion-option>
         </ion-select>
       </ion-item>
-      <ion-item>
+      <ion-item  showWhen="ios,android,windows" hideWhen="core,mobileweb">
         <ion-label>Date</ion-label>
-        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date" showWhen="core,mobileweb"></ion-datetime>
-        <ion-input formControlName="date" (ionFocus)="showDateTimePicker($event)" showWhen="ios,android,windows"></ion-input>
+        <ion-input formControlName="date" (ionFocus)="showDateTimePicker($event)"></ion-input>
       </ion-item>
-
+      <ion-item showWhen="core,mobileweb">
+        <ion-label>Date</ion-label>
+        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date"></ion-datetime>
+      </ion-item>
       </ion-list>
       <button ion-button full (click)="addNewTask()" color="appgreen">Add task</button>
       <!-- <ion-item>
