homepage ui changed

--- a/app/src/pages/tasks/userTasks.html
+++ b/app/src/pages/tasks/userTasks.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content  class="outer-content">
   <ion-list>
     <ion-item-sliding *ngFor="let task of allTasks; let idx = index">
       <ion-item>
