--- a/app/src/pages/tasks/userTasks.html
+++ b/app/src/pages/tasks/userTasks.html
@@ -14,7 +14,7 @@
         <p>{{task.due_date}}</p>
       </ion-item>
       <ion-item-options side="right">
-        <button ion-button (click)="deleteTask(idx,task)">Delete</button>
+        <button ion-button (click)="deleteTask(idx,task)" color="apppink">Delete</button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
