phone number fixed

--- a/app/src/pages/login/login.html
+++ b/app/src/pages/login/login.html
@@ -36,7 +36,7 @@
               </ion-select>
             </ion-item>
           <ion-item>
-            <ion-label stacked color="apptxt">Phone Number (07X XXX XXXX)</ion-label>
+            <ion-label stacked color="apptxt">Phone Number (77 XXX XXXX)</ion-label>
             <ion-input type="tel" formControlName="phone_number" color="apptxt"></ion-input>
           </ion-item>
         </form>
