added filters added user population for tasks

--- a/app/src/pages/tabs/tabs.html
+++ b/app/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs tabsLayout="title-hide" tabs-only color="appbg">
   <ion-tab [root]="tab1Root" tabTitle="Upcoming" tabIcon="notifications"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="All tasks" tabIcon="archive"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="All tasks" tabIcon="filing"></ion-tab>
 </ion-tabs>
