--- a/app/src/pages/commonModal/CModal.html
+++ b/app/src/pages/commonModal/CModal.html
@@ -71,7 +71,7 @@
           hideWhen="core,mobileweb"></ion-input>
       </ion-item>
     </ion-list>
-    <!-- <button ion-button full (click)="addNewTask()" color="appgreen">Add task</button> -->
+    <button ion-button full (click)="updateTask()" color="appgreen">Add task</button>
     <!-- <ion-item>
         <label>Status</label>
         <select class="form-control" formControlName="status">
