--- a/app/src/pages/addTasks/addTask.html
+++ b/app/src/pages/addTasks/addTask.html
@@ -66,9 +66,10 @@
       </ion-item>
       <ion-item>
         <ion-label>Date</ion-label>
-        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date" showWhen="core,mobileweb" hideWhen="ios,android"></ion-datetime>
-        <ion-input formControlName="date" (focus)="showDateTimePicker($event);$event.stopPropagation()" readonly="readonly" showWhen="ios,android"
-          hideWhen="core,mobileweb"></ion-input>
+        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date" (click)="datepicker()"></ion-datetime>
+        <!-- <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date" showWhen="core,mobileweb" hideWhen="ios,android"></ion-datetime> -->
+        <!-- <ion-input formControlName="date" (focus)="showDateTimePicker($event);$event.stopPropagation()" readonly="readonly" showWhen="ios,android"
+          hideWhen="core,mobileweb"></ion-input> -->
       </ion-item>
     </ion-list>
     <button ion-button full (click)="addNewTask()" color="appgreen">Add task</button>
