--- a/app/src/pages/commonModal/CModal.html
+++ b/app/src/pages/commonModal/CModal.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="appbg">
-    <ion-title>Add Task</ion-title>
+    <ion-title>Edit Task</ion-title>
     <ion-buttons left>
       <button ion-button icon-only (click)="viewCtrl.dismiss()" color="apppink">
         <ion-icon name="arrow-back"></ion-icon>
@@ -66,12 +66,10 @@
       </ion-item>
       <ion-item>
         <ion-label>Date</ion-label>
-        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date" showWhen="core,mobileweb" hideWhen="ios,android"></ion-datetime>
-        <ion-input formControlName="date" (focus)="showDateTimePicker($event);$event.stopPropagation()" readonly="readonly" showWhen="ios,android"
-          hideWhen="core,mobileweb"></ion-input>
-      </ion-item>
+        <ion-datetime displayFormat="MMM DD, YYYY HH:mm" class="form-control" formControlName="date"></ion-datetime>
+        </ion-item>
     </ion-list>
-    <button ion-button full (click)="updateTask()" color="appgreen">Add task</button>
+    <button ion-button full (click)="updateTask()" color="appgreen">Update</button>
     <!-- <ion-item>
         <label>Status</label>
         <select class="form-control" formControlName="status">
