--- a/app/src/pages/tasks/userTasks.html
+++ b/app/src/pages/tasks/userTasks.html
@@ -10,13 +10,13 @@
       <button class="btn--sortby" (click)="showActionSheet()"><ion-icon name="funnel"></ion-icon> {{sortName}} <ion-icon name="arrow-dropdown"></ion-icon></button>
     </ion-list-header>
     <ion-item-sliding *ngFor="let task of allTasks | orderBy:order | filterBy:filter; let idx = index ">
-      <ion-item>
+      <button ion-item (click)="viewTask(task)">
         <h3>{{task.title}}</h3>
         <p>{{task.description}}</p>
         <p>{{task.project}}</p>
         <p>{{task.due_date}}</p>
         <p *ngIf="task.assignedUsers">{{task.assignedUsers.firstname}} {{task.assignedUsers.lastname}}</p>
-      </ion-item>
+      </button>
       <ion-item-options side="right">
         <button ion-button (click)="deleteTask(idx,task)" color="apppink">Delete</button>
       </ion-item-options>
