--- a/app/src/pages/tasks/userTasks.html
+++ b/app/src/pages/tasks/userTasks.html
@@ -18,7 +18,7 @@
         <p *ngIf="task.assignedUsers">{{task.assignedUsers.firstname}} {{task.assignedUsers.lastname}}</p>
       </button>
       <ion-item-options side="right">
-        <button ion-button (click)="deleteTask(idx,task)" color="apppink">Delete</button>
+        <button ion-button (click)="deleteTask(task)" color="apppink">Delete</button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
